push several weeks worth of development Includes the following: - Launcher tab with barely functional theming options - Fix for the command line parameters text box not working as intended - Icons for the menu items - Confirmation dialog for the New menu item